--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@ main {
 		"another_cities another_cities another_cities another_cities";
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
 	main {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
@@ -30,6 +30,10 @@ main {
 			"favorites ."
 			"input_city add_city"
 			"another_cities another_cities";
+	}
+	
+	.another_city {
+		width: 100%;
 	}
 }
 
@@ -76,12 +80,12 @@ main {
 .another_cities {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 	grid-area: another_cities;
 }
 
 .another_city {
-	min-width: 300px;
-	max-width: 600px;
+	width: 425px;
 	border: 1px black solid;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
