--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	padding-left:25%;
-	padding-right: 25%;
+	padding-left: 15%;
+	padding-right: 15%;
 	font-family: "Bitter", serif;
 	font-size: 18px;
 }
@@ -54,7 +54,7 @@ main {
 	border: none;
 	border-radius: 5px;
 	padding: 10px;
-	width: 80%;
+	width: 100%;
 }
 
 .add_city {
@@ -66,8 +66,8 @@ main {
 
 .add_city_button {
 	margin-left: 15px;
-	padding-right: 12px;
-	padding-left: 12px;
+	padding-right: 13px;
+	padding-left: 13px;
 	padding-top: 6px;
 	padding-bottom: 6px;
 	font-size: 24px;
@@ -85,7 +85,10 @@ main {
 }
 
 .another_city {
-	width: 425px;
+	background-color: white;
+	color: black;
+	padding: 0;
+	width: 300px;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: auto;
@@ -102,11 +105,12 @@ main {
 }
 
 .another_city_temperature {
+	font-weight: bold;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	grid-area: another_city_temperature;
-	font-size: 24px;
+	font-size: 30px;
 }
 
 .another_city_weather_image {
@@ -132,6 +136,15 @@ h1 {
 	color: gray;
 }
 
+h2 {
+	font-size: 36px;
+	color: gray;
+}
+
+h3 {
+	font-size: 30px;
+}
+
 .update_weather {
 	display: flex;
 	justify-content: center;
@@ -152,10 +165,12 @@ h1 {
 
 .main_city_name {
 	margin: 0;
-	font-size: 36px;
+	font-size: 34px;
+	color: black;
 }
 
 .weather_temperature_main {
+	font-weight: bold;
 	margin: 0;
 	font-size: 108px;
 }
@@ -187,7 +202,7 @@ b {
 	background-color: gray;
 	border: none;
 	font-size: 16px;
-	padding: 10px 14px;
+	padding: 11px 15px;
 	color: white;
 }
 
@@ -195,6 +210,10 @@ b {
 	width: 36px;
 	height: 36px;
 	display: none;
+}
+
+.property {
+	font-weight: bold;
 }
 
 @media only screen and (max-width: 900px) {
@@ -229,6 +248,86 @@ b {
 	}
 	
 	.add_city {
-		justify-content: flex-start;
+		justify-content: space-between;
+	}
+}
+
+@media only screen and (max-width: 420px) {
+	main {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: auto;
+		grid-template-areas:
+			"weather_here update_weather"
+			"main_city main_city"
+			"weather_image weather_temperature"
+			"weather_properties weather_properties"
+			"favorites ."
+			"add_city add_city"
+			"another_cities another_cities";
+	}
+	
+	.another_city {
+		width: 100%;
+	}
+	body {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+	
+	#update_geo_text {
+		display: none;
+	}
+	
+	#update_geo_img {
+		display: block;
+	}
+	
+	.add_city {
+		justify-content: space-between;
+	}
+	
+	.weather_temperature_main {
+		font-size: 64px;
+	}
+}
+
+@media only screen and (max-width: 345px) {
+	main {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: auto;
+		grid-template-areas:
+			"weather_here update_weather"
+			"main_city main_city"
+			"weather_image weather_temperature"
+			"weather_properties weather_properties"
+			"favorites ."
+			"add_city add_city"
+			"another_cities another_cities";
+	}
+	
+	.another_city {
+		width: 100%;
+	}
+	body {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	
+	#update_geo_text {
+		display: none;
+	}
+	
+	#update_geo_img {
+		display: block;
+	}
+	
+	.add_city {
+		justify-content: space-between;
+	}
+	
+	.weather_temperature_main {
+		font-size: 64px;
 	}
 }
